--- a/partials/_nav.html
+++ b/partials/_nav.html
@@ -262,12 +262,6 @@
         <span class="dnl-link-text">About</span>
       </a>
     </li>
-<!--     <li>
-      <a href="index.html">
-        <span class="fa fa-home dnl-link-icon"></span>
-        <span class="dnl-link-text">Home</span>
-      </a>
-    </li> -->
     <p class="dnl-nav-title">Contribute</p>
 <!--     <li>
       <a href="cse.html">
@@ -280,6 +274,9 @@
         <span class="fa fa-shopping-cart dnl-link-icon"></span>
         <span class="dnl-link-text">Store</span>
       </a>
+    </li>
+    <li>
+      @@include('../partials/_donate.html')
     </li>        
   </ul>      
 </div><!-- /.dash-navbar-left -->
