added donate button

--- a/templates/afterwork.html
+++ b/templates/afterwork.html
@@ -45,13 +45,14 @@
     </div>
     <div class="col-xs-12">
       <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/222723623?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/279324120?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
       <br/>
       <h1 class="title">Description</h1>
       <p>Two specters are haunting earth in the 21st-century: ecological catastrophe and technological automation. Taken to their logical extremes, these twin anxieties will drive the end of capitalism. What are the implications of artificial intelligence, automation, and the future of work?</p>
       <p>This video draws adapted text from social critic Peter Frase's 2016 book, Four Futures, and archival footage from the Prelinger Archives, to form a speculative exercise in social science fiction.</p>
       <p>The video is often screened during an ideation workshop that helps tech and civic workers reimagine “sharing" platforms and design cooperative solutions for the post-carbon, post-capitalist future. After watching the video, participants <a href="futuregenerator.html">design the future</a>.</p>
+      <p>Shout out to Emily's mom and dad for helping to translate the text into Español.</p>
     </div>
   </div><!--end row-->
 @@include('../partials/_footer.html')
