--- a/templates/wwwork.html
+++ b/templates/wwwork.html
@@ -51,7 +51,8 @@
       </div>
       <br/>
       <h1 class="title">Description</h1>
-      <p><em>WWWork</em> is a video essay about the relationship of art and work as practiced within a globally networked society. The project considers: the commodification of creativity and the the role of the artist, the effects of immaterial labor on the body, and the influence the accelerating fragmentation of the work process has on our lives and our ability to enact social and political change. WWWork is composed from 100% unoriginal content, consisting of stock photography, iMovie trailer music, found footage, and outsourced performances remixed from critical texts by Franco Berardi, Lars Bang Larsen, Michele Masucci, Sarat Maharaj, OTCOP, Nina Power, Raqs Media Collective, and Hito Steyerl.</p>
+      <p><em>WWWork</em> is a video essay about the relationship of art and work as practiced within a globally networked society. The project considers: the commodification of creativity and the the role of the artist, the effects of immaterial labor on the body, and the influence the accelerating fragmentation of the work process has on our lives and our ability to enact social and political change.</p>
+      <p><em>WWWork</em> is composed from 100% unoriginal content, consisting of stock photography, iMovie trailer music, found footage, and outsourced performances remixed from critical texts by Franco Berardi, Lars Bang Larsen, Michele Masucci, Sarat Maharaj, OTCOP, Nina Power, Raqs Media Collective, and Hito Steyerl.</p>
     </div>
   </div><!--end row-->
 @@include('../partials/_footer.html')
